Mon Jun  8 16:18:00 PDT 1998 Manish Singh <yosh@gimp.org>

	* app/menus.c: fix stupid <Separator> menu bug

Mon Jun  8 16:39:19 EDT 1998 Adrian Likins <adrian@gimp.org>

	*app/commands.c
	*app/file_new_dialog.[ch]
	*app/prefereces_dialog.[ch]: split up command.c
	into three files, commands.c, file_new_dialog.c,
	and preferences.c

	*app/Makefile.am: change to incorporate the new files
	
	*TODO: more feature ideas

Mon Jun  8 04:30:00 EDT 1998 Chris Lahey  <clahey@umich.edu>

	* app/devices.c: stdio.h
	* plug-ins/depthmerge/depthmerge.c: stdio.h
	* plug-ins/gtm/gtm.c: stdio.h
	* plug-ins/nlfilt/nlfilt.c: stdio.h, stdlib.h
	Added the listed includes to get it to compile.

Sun Jun  7 19:30:22 EDT 1998 Adrian Likins <adrian@gimp.org>

	*app/commands.c: more fiddling with the file_new dialog.
	More stuff hooked up and working, but still not finished.

	*TODO: filling in more wishlist stuff

Sun Jun  7 16:18:16 PDT 1998 Manish singh <yosh@gimp.org>

	* plug-ins/Lighting/lighting_main.c
	* plug-ins/Lighting/lighting_ui.c: ui fixes (taken from MapObject)

Sun Jun  7 18:44:17 EDT 1998  Matthew Wilson  <msw@gimp.org>

	* plug-ins/webbrowser/web-browser.scm: changed the URL for the
	Manual

Sun Jun  7 12:39:56 PDT 1998 Manish Singh <yosh@gimp.org>

	* plug-ins/libgck/gck/gcktypes.h
	* plug-ins/libgck/gck/gckui.h
	* plug-ins/libgck/gck/gckui.c
	* plug-ins/ifscompose/ifscompose.c: changes for the new accelerator
	stuff

Sun Jun  7 11:04:38 1998  Tim Janik  <timj@gtk.org>

	* app/gradient.c (cpopup_create_menu_item_with_label): use GtkAccelLabel
	when creating a menuitems label seperatedly.

	* app/commands.h:
 	* app/commands.c:
	(tips_dialog_cmd_callback):
	(filters_repeat_cmd_callback):
	(tools_select_cmd_callback): make use of the callback_action argument.

	* app/main.c (main): removed gtk_accelerator_table_set_mod_mask(),
	since gtk provides decent default values now.

	* app/layers_dialog.c:
	* app/interface.c:
	* app/indexed_palette.c:
	* app/channels_dialog.c: